# windows-kernel-rs

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config
windows-kernel-abstract/: Cargo.toml
windows-kernel-abstract/src/: lib.rs  log.rs  mdl.rs
windows-kernel-bindgen/: Cargo.toml
windows-kernel-bindgen/src/: lib.rs
windows-kernel-cng-sys/: Cargo.toml  build.rs
windows-kernel-cng-sys/src/: lib.rs  wrapper_bcrypt.h
windows-kernel-common-sys/: Cargo.toml  build.rs
windows-kernel-common-sys/src/: lib.rs  wrapper_base.h
windows-kernel-netio-sys/: Cargo.toml  build.rs
windows-kernel-netio-sys/src/: lib.rs  wrapper_wsk.h
windows-kernel-ntoskrnl-sys/: Cargo.toml  build.rs
windows-kernel-ntoskrnl-sys/src/: exception_free.c  lib.rs  wrapper_base.h  wrapper_ntifs.h
windows-kernel-winsock/: Cargo.toml
windows-kernel-winsock-example/: Cargo.toml  DriverCertificate.cer  Makefile.toml  build.rs
windows-kernel-winsock-example/src/: lib.rs
windows-kernel-winsock/src/: lib.rs
