[package]
name = "windows_kernel_common_sys"
version = "0.1.0"
license = "MIT"
authors = ["Hussein Ait Lahcen <hussein.aitlahcen@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
cty = "0.2.1"

[dependencies.winapi]
git = "https://github.com/retep998/winapi-rs"
branch = "0.3"
features = ["ws2def", "ntlsa", "ntstatus", "impl-default"]
default-features = false

[build-dependencies.windows_kernel_bindgen]
path = "../windows-kernel-bindgen"